--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 78: Champagne Coast - Blood Orange
+          Week 79: Pitch the Baby - Cocteau Twins
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 9.4/10</h2>
+            <h2 id="rating">Overall Rating 8.0/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/0AIpGG5dxEgnAymhdJRSZ0?si=496940823617478b"
+                    href="https://open.spotify.com/track/1DXD0wVXXHwUYo9AXbcMMI?si=62785ca0c06d408e"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=nO6y1-erVEw"
+                    href="https://www.youtube.com/watch?v=MbjO9S9TRsc"
                     target="_blank"
                     ><center>
                       <img
@@ -141,22 +141,20 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              There are strange overlapping vocals during the chorus and in
-              other parts of the song that under other circumstances I would
-              feel overwhelmed and turned off by. For this song, however, they
-              are weaved together in a way that elevates the dreamy nature of
-              this song.
+              The Cocteau Twins have an entirely distinct sound, instantly
+              recognizable whenever they are played. This one specifically mixes
+              their high pitched vocals with a incredibly pleasing deep, punchy,
+              production. They are not twins, it's three unrelated people.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              I've been a moderately big fan of blood orange for a while now,
-              but haven't explored his entire discography (still yet to complete
-              it, in fact). I've fequented his latest two releases "Angel's
-              Pulse" and "Negro Swan" for a few years now, but just recently
-              this track was suggested to me in some way or another. It's
-              definitely reminiscent of what I know and love of his new work,
-              but has this lulling effect that is new to me. Give this one a
-              listen and make it a great week!
+              "Heaven or Las Vegas" is the Cocteau Twins' most acclaimed album
+              of their 10 LP releases. It is the only project of theirs that I
+              have listened to all the way through, but the way it navigates
+              heavy topics of death and birth through their exquisite dream pop
+              sound is quite revolutionary. This track is my current favorite
+              for mostly arbitrary reasons, any song on this album is quite
+              satisfactory. Give it a listen and make it a wonderful week!
             </p>
           </div>
         </div>
@@ -644,6 +642,11 @@
               <td>77</td>
               <td>Dame Beso // Muevete - Kali Uchis</td>
               <td>9.1/10</td>
+            </tr>
+            <tr>
+              <td>78</td>
+              <td>Champagne Coast - Blood Orange</td>
+              <td>9.4/10</td>
             </tr>
           </table>
         </div>
