--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 79: Pitch the Baby - Cocteau Twins
+          Week 80: Prove It To You - Brittany Howard
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.0/10</h2>
+            <h2 id="rating">Overall Rating 9.4/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/1DXD0wVXXHwUYo9AXbcMMI?si=62785ca0c06d408e"
+                    href="https://open.spotify.com/track/0w9eE1YhhHG4pTGK2eaWhs?si=cff8bc4c1172408d"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=MbjO9S9TRsc"
+                    href="https://www.youtube.com/watch?v=StNb210Z_vo"
                     target="_blank"
                     ><center>
                       <img
@@ -141,20 +141,27 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The Cocteau Twins have an entirely distinct sound, instantly
-              recognizable whenever they are played. This one specifically mixes
-              their high pitched vocals with a incredibly pleasing deep, punchy,
-              production. They are not twins, it's three unrelated people.
+              Brittany Howard has so much control over her voice, it is truly
+              amazing. Her full range isn't encapsulated within this particular
+              track, but her vocals are still a dominating force even among the
+              heavy production of this song.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              "Heaven or Las Vegas" is the Cocteau Twins' most acclaimed album
-              of their 10 LP releases. It is the only project of theirs that I
-              have listened to all the way through, but the way it navigates
-              heavy topics of death and birth through their exquisite dream pop
-              sound is quite revolutionary. This track is my current favorite
-              for mostly arbitrary reasons, any song on this album is quite
-              satisfactory. Give it a listen and make it a wonderful week!
+              Brittany Howard released a new record this week, "What Now". I
+              have been a peripheral fan of her first and only prior release
+              "Jaime" yet her discography is too limited for me to really dive
+              into her as an artist. This new album is something of true
+              artistry, it is exactly the kind of sound I desire for the future
+              of music as a whole. It's heavy and overproduced, Howard's voice
+              fighting over the etheral noise of some of the more dense tracks.
+              Admittedly, it lightens up for a few tracks to really let her
+              vocals shine, compiling into this sort of tug of war between
+              classical soul and techno-heavy funk. I love this album so much,
+              and I believe it's safe to say I now consider myself a true fan of
+              Brittany Howard. Give this one a listen and, if you like it,
+              please consider listening to this whole record. Make it a great
+              week!
             </p>
           </div>
         </div>
@@ -647,6 +654,11 @@
               <td>78</td>
               <td>Champagne Coast - Blood Orange</td>
               <td>9.4/10</td>
+            </tr>
+            <tr>
+              <td>79</td>
+              <td>Pitch the Baby - Cocteau Twins</td>
+              <td>8.0/10</td>
             </tr>
           </table>
         </div>
