--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 80: Prove It To You - Brittany Howard
+          Week 81: I Would Die 4 U - Price
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 9.4/10</h2>
+            <h2 id="rating">Overall Rating 9.2/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/0w9eE1YhhHG4pTGK2eaWhs?si=cff8bc4c1172408d"
+                    href="https://open.spotify.com/track/6fBwVe6udYdnRqwqo06if8?si=7fb06c1895f846e0"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=StNb210Z_vo"
+                    href="https://www.youtube.com/watch?v=hkNl3pq1twE"
                     target="_blank"
                     ><center>
                       <img
@@ -141,27 +141,23 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              Brittany Howard has so much control over her voice, it is truly
-              amazing. Her full range isn't encapsulated within this particular
-              track, but her vocals are still a dominating force even among the
-              heavy production of this song.
+              The production of this song is so uniquely Prince; it's
+              immediately obvious whose song this is before he even starts
+              singing. Hearing a Prince song after a long dry spell of
+              listenership is so refreshing, his sound just doesn't exist
+              anywhere else in music.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Brittany Howard released a new record this week, "What Now". I
-              have been a peripheral fan of her first and only prior release
-              "Jaime" yet her discography is too limited for me to really dive
-              into her as an artist. This new album is something of true
-              artistry, it is exactly the kind of sound I desire for the future
-              of music as a whole. It's heavy and overproduced, Howard's voice
-              fighting over the etheral noise of some of the more dense tracks.
-              Admittedly, it lightens up for a few tracks to really let her
-              vocals shine, compiling into this sort of tug of war between
-              classical soul and techno-heavy funk. I love this album so much,
-              and I believe it's safe to say I now consider myself a true fan of
-              Brittany Howard. Give this one a listen and, if you like it,
-              please consider listening to this whole record. Make it a great
-              week!
+              Little has to be said about Prince's "Purple Rain", I'm pretty
+              sure you've already heard of it. If you haven't had the joy, you
+              should stop reading this review and listen to the whole thing
+              through and come back to me. "When Doves Cry" is one of the best
+              songs of all time. Anyway, this song caught my ear this week on
+              Valentine's Day nonetheless (topical!). It quickly perforated into
+              multiple playlists of my own, and it has had a firm grasp on me
+              ever since. You WILL like this song, I couldn't imagine a world
+              otherwise. Enjoy this one and make it a great week!
             </p>
           </div>
         </div>
@@ -659,6 +655,11 @@
               <td>79</td>
               <td>Pitch the Baby - Cocteau Twins</td>
               <td>8.0/10</td>
+            </tr>
+            <tr>
+              <td>80</td>
+              <td>Prove It To You - Brittany Howard</td>
+              <td>9.42/10</td>
             </tr>
           </table>
         </div>
