--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 81: I Would Die 4 U - Price
+          Week 82: Illusions - Jalen Ngonda
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 9.2/10</h2>
+            <h2 id="rating">Overall Rating 8.6/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/6fBwVe6udYdnRqwqo06if8?si=7fb06c1895f846e0"
+                    href="https://open.spotify.com/track/0FdvQVBKMN5Vc2SiN7bU0Z?si=2642e3494a214463"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=hkNl3pq1twE"
+                    href="https://www.youtube.com/watch?v=idzAdax8g-A"
                     target="_blank"
                     ><center>
                       <img
@@ -141,23 +141,25 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The production of this song is so uniquely Prince; it's
-              immediately obvious whose song this is before he even starts
-              singing. Hearing a Prince song after a long dry spell of
-              listenership is so refreshing, his sound just doesn't exist
-              anywhere else in music.
+              The trumpet carries this song and even gets its own solo towards
+              the end. Jalen Ngonda always adheres to this classical small band
+              production, transporting his music to a sound from decades
+              earlier. His voice has an almost instrumental rasp to it, it works
+              so beautifully with this style of music.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Little has to be said about Prince's "Purple Rain", I'm pretty
-              sure you've already heard of it. If you haven't had the joy, you
-              should stop reading this review and listen to the whole thing
-              through and come back to me. "When Doves Cry" is one of the best
-              songs of all time. Anyway, this song caught my ear this week on
-              Valentine's Day nonetheless (topical!). It quickly perforated into
-              multiple playlists of my own, and it has had a firm grasp on me
-              ever since. You WILL like this song, I couldn't imagine a world
-              otherwise. Enjoy this one and make it a great week!
+              A new single from my recent discovery Jalen Ngonda!! His debut
+              album "Come Around and Love Me" released late last year and
+              absolutely blew me away. This single is also excellent, but
+              doesn't hold a candle to my favorites on this album. So after
+              listening to this one, make sure to check out the title track of
+              that album at the very least. "Illusions" has slightly more
+              developed vocals where his previous album let his production meld
+              more with his soft voice. He relied on a significant amount of
+              backing vocals as well, so it's nice to hear him really boast his
+              voice in this new track. I'm looking forward to what is to come
+              with this artist. Make it a great week!
             </p>
           </div>
         </div>
@@ -659,7 +661,12 @@
             <tr>
               <td>80</td>
               <td>Prove It To You - Brittany Howard</td>
-              <td>9.42/10</td>
+              <td>9.4/10</td>
+            </tr>
+            <tr>
+              <td>81</td>
+              <td>I Would Die 4 You - Prince</td>
+              <td>9.2/10</td>
             </tr>
           </table>
         </div>
