--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 82: Illusions - Jalen Ngonda
+          Week 83: He Loves Me Yeah! - Faye Webster
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.6/10</h2>
+            <h2 id="rating">Overall Rating 8.9/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/0FdvQVBKMN5Vc2SiN7bU0Z?si=2642e3494a214463"
+                    href="https://open.spotify.com/track/7Ep9IjggTVy070hEkaSLIa?si=98467cfebed9429a"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=idzAdax8g-A"
+                    href="https://www.youtube.com/watch?v=ebk15gYi8Dg"
                     target="_blank"
                     ><center>
                       <img
@@ -141,25 +141,26 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The trumpet carries this song and even gets its own solo towards
-              the end. Jalen Ngonda always adheres to this classical small band
-              production, transporting his music to a sound from decades
-              earlier. His voice has an almost instrumental rasp to it, it works
-              so beautifully with this style of music.
+              This song jumps out of the gate with strong electric guitar and
+              upbeat production, a very uncharacteristic sound based on Faye
+              Webster's previous track record. Her vocals come in in a similar
+              manner to her slower songs, combining this upbeat production with
+              her soft vocals. It results in a lovely multi-faceted romance, I
+              love it!
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              A new single from my recent discovery Jalen Ngonda!! His debut
-              album "Come Around and Love Me" released late last year and
-              absolutely blew me away. This single is also excellent, but
-              doesn't hold a candle to my favorites on this album. So after
-              listening to this one, make sure to check out the title track of
-              that album at the very least. "Illusions" has slightly more
-              developed vocals where his previous album let his production meld
-              more with his soft voice. He relied on a significant amount of
-              backing vocals as well, so it's nice to hear him really boast his
-              voice in this new track. I'm looking forward to what is to come
-              with this artist. Make it a great week!
+              Faye Webster's latest project, "Underdressed At The Symphony"
+              released this week. It's a short LP, with four out of the ten
+              songs being prior single releases that have dropped sparsely over
+              the last year. I must admit that this release is arguably her
+              weakest, but I find it as sort of a transitional period for her.
+              She is trying new sounds here, with song lengths spanning from
+              just over a minute, all the way to pushing six minutes, she trys
+              it all here in her limited track list. This track greatly stoodout
+              over the rest as something really special and new form for her. I
+              desperately hope she keeps adhereing to this sound in her future
+              releases. Give this one a listen, and make it a great week!
             </p>
           </div>
         </div>
@@ -193,18 +194,18 @@
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Keena Garbe: Joy Of My Life - Chris Stapleton
+            Ayla Garbe: Love T.K.O. - Teddy Pendergrass
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating 9.0/10</h2>
+              <h2 id="rating">Overall Rating 10/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/4EuaDcxHmHKS6gZ5iuGba0?si=386d58c7af694f3b"
+                    href="https://open.spotify.com/track/3IVaPHncIZWWNjfg29HVLq?si=c51fe54d84e8461c"
                     target="_blank"
                     ><center>
                       <img
@@ -218,7 +219,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=jsE_zp_4vyo"
+                    href="https://www.youtube.com/watch?v=Pb4j2UqkOJ0"
                     target="_blank"
                     ><center>
                       <img
@@ -235,11 +236,15 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            Chris Stapleton has a voice that undeniably stands above his country
-            music counterparts. His music brings me back to the country music I
-            remember as a kid. Joy of my life is my current favorite, it is
-            beautiful! It reminds me to treasure each and everyday and
-            appreciate all the joys in my life❤️
+            This song brings me absolute joy from the first note to the last. In
+            my recent deep dive into some 70’s/80’s soul music, this particular
+            tune stuck with me so heavily and made its way to my daily rotation.
+            The song feels like taking a deep breath. I could truly listen to
+            the instrumental only and love this song just as much, but with Mr.
+            Pendergrass’s passionate vocals this track becomes the definition of
+            perfect for me. I highly recommend giving this classic song a listen
+            if you haven’t already, and maybe take a dive into the pioneers of
+            the r&b/hip-hop sound as well!
           </p>
         </div>
         <div class="divider"><center>Songs of the Week Spotify</center></div>
@@ -667,6 +672,11 @@
               <td>81</td>
               <td>I Would Die 4 You - Prince</td>
               <td>9.2/10</td>
+            </tr>
+            <tr>
+              <td>82</td>
+              <td>Illusions - Jalen Ngonda</td>
+              <td>8.6/10</td>
             </tr>
           </table>
         </div>
