--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 83: He Loves Me Yeah! - Faye Webster
+          Week 84: Crushed Velvet - Molly Lewis, Thee Sacred Souls
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.9/10</h2>
+            <h2 id="rating">Overall Rating 8.4/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/7Ep9IjggTVy070hEkaSLIa?si=98467cfebed9429a"
+                    href="https://open.spotify.com/track/0ot8VA36fmxBlIqa5xbnf7?si=07e271511f0b40db"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=ebk15gYi8Dg"
+                    href="https://www.youtube.com/watch?v=GQMU_5Xm40s"
                     target="_blank"
                     ><center>
                       <img
@@ -141,26 +141,27 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              This song jumps out of the gate with strong electric guitar and
-              upbeat production, a very uncharacteristic sound based on Faye
-              Webster's previous track record. Her vocals come in in a similar
-              manner to her slower songs, combining this upbeat production with
-              her soft vocals. It results in a lovely multi-faceted romance, I
-              love it!
+              I love the western dystopia that this song encapsulates. I'm
+              honestly not one to sit and listen to an instrumental song, but
+              this one remains an exception. Specifically, the whistle notes on
+              this track make it what it is.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Faye Webster's latest project, "Underdressed At The Symphony"
-              released this week. It's a short LP, with four out of the ten
-              songs being prior single releases that have dropped sparsely over
-              the last year. I must admit that this release is arguably her
-              weakest, but I find it as sort of a transitional period for her.
-              She is trying new sounds here, with song lengths spanning from
-              just over a minute, all the way to pushing six minutes, she trys
-              it all here in her limited track list. This track greatly stoodout
-              over the rest as something really special and new form for her. I
-              desperately hope she keeps adhereing to this sound in her future
-              releases. Give this one a listen, and make it a great week!
+              I believe I discovered this song this week on a Spotify daylist
+              called "indietronica winter monday evening". Molly Lewis's name
+              felt familiar to me, though I had never listened to anything she
+              had made before. What secondarily caught my eye, though, is that
+              Thee Sacred Souls were on this song (I'm a fan of theirs). I was
+              expecting a modern funk piece as is custom to Thee Sacred Souls,
+              but I instead got this floaty composition of very unexpected
+              sounds. I further listened to the rest of Molly Gordon's newest
+              album from which "Crushed Velvet" hails, "On The Lips". It was a
+              really enjoyable composition project, with vastly different tracks
+              throughout, yet a bit of each track wonderfully weaved into the
+              next. I highly recommend putting this album on in the background
+              of a study session or what have you. Give this one a listen and
+              make it a great week!
             </p>
           </div>
         </div>
@@ -677,6 +678,11 @@
               <td>82</td>
               <td>Illusions - Jalen Ngonda</td>
               <td>8.6/10</td>
+            </tr>
+            <tr>
+              <td>83</td>
+              <td>He Loves Me Yeah! - Faye Webster</td>
+              <td>8.9/10</td>
             </tr>
           </table>
         </div>
