--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 84: Crushed Velvet - Molly Lewis, Thee Sacred Souls
+          Week 85: Got the Juice - Flo Milli
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.4/10</h2>
+            <h2 id="rating">Overall Rating 9.0/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/0ot8VA36fmxBlIqa5xbnf7?si=07e271511f0b40db"
+                    href="https://open.spotify.com/track/4cDMiCvsWskTW4LHtZqscq?si=8f5c8605ab844f11"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=GQMU_5Xm40s"
+                    href="https://www.youtube.com/watch?v=qZbpYDKEH3o"
                     target="_blank"
                     ><center>
                       <img
@@ -141,27 +141,26 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              I love the western dystopia that this song encapsulates. I'm
-              honestly not one to sit and listen to an instrumental song, but
-              this one remains an exception. Specifically, the whistle notes on
-              this track make it what it is.
+              I am adapting this section to just talk about the length of all
+              songs on this album so deal with it. While this song is actually
+              too short in my opinion, I am quite a fan of the shortened runtime
+              on this full length LP. Lots of rap songs in this day and age
+              overuse these corny choruses or bridges that just do not
+              intertwine well with the heavy lyricism of the verses. Flo Milli
+              keeps it curt with her choruses in this album and lets her verses
+              speak for themselves.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              I believe I discovered this song this week on a Spotify daylist
-              called "indietronica winter monday evening". Molly Lewis's name
-              felt familiar to me, though I had never listened to anything she
-              had made before. What secondarily caught my eye, though, is that
-              Thee Sacred Souls were on this song (I'm a fan of theirs). I was
-              expecting a modern funk piece as is custom to Thee Sacred Souls,
-              but I instead got this floaty composition of very unexpected
-              sounds. I further listened to the rest of Molly Gordon's newest
-              album from which "Crushed Velvet" hails, "On The Lips". It was a
-              really enjoyable composition project, with vastly different tracks
-              throughout, yet a bit of each track wonderfully weaved into the
-              next. I highly recommend putting this album on in the background
-              of a study session or what have you. Give this one a listen and
-              make it a great week!
+              NEW FLO!! To be completely transparent, I forgot that Flo Milli's
+              new album was dropping this last week. What a great surprise it
+              was, though, as this album is cohesively her best. She sounds very
+              developed on both the RnB tracks and the more rap-heavy tracks
+              that span this album. She seems to be finally getting the
+              recognition she deserves in this industry; Her production value on
+              this project has improved greatly because of it. With another
+              impressive album, she has still never let me down. Give this one a
+              listen and make it a great week!
             </p>
           </div>
         </div>
@@ -683,6 +682,11 @@
               <td>83</td>
               <td>He Loves Me Yeah! - Faye Webster</td>
               <td>8.9/10</td>
+            </tr>
+            <tr>
+              <td>84</td>
+              <td>Crushed Velvet - Molly Lewis, Thee Sacred Souls</td>
+              <td>8.4/10</td>
             </tr>
           </table>
         </div>
